Halite3_Python3_MacOS/replays/errorlog-20181106-212704-0500-1541557624-32-32-1.log

Initialization Phase
================================================================
error: communication error with bot: read failed, errno was: 0 (Undefined error: 0)
Bot error output was:
  File "MyBot.py", line 42
    elif goback[ship.id]:
       ^
SyntaxError: invalid syntax

